I updated the css link on the html file

--- a/frontEndFiles/mapStatus.html
+++ b/frontEndFiles/mapStatus.html
@@ -30,7 +30,7 @@
 
 <!--     AIzaSyChdBMFtKHfi-oRh6z3RG-q4emVnmWPc4g -->
 
-    <link rel="stylesheet" type="text/css" href="css/mapStyle.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/mapStyle.css">
 
 <!-- 
       <script async defer
