--- a/frontEndFiles/ReportForm.html
+++ b/frontEndFiles/ReportForm.html
@@ -189,17 +189,17 @@ p {
         icons
 
     <div>
-<img src="images/murder.png" style="width:10%">
-<img src="images/hijacking.png" style="width:10%">
-<img src="images/assault.png" style="width:10%">
-<img src="images/protests.png" style="width:10%">
+<img src="resources/css/img/murder.png" style="width:10%">
+<img src="resources/css/img/hijacking.png" style="width:10%">
+<img src="resources/css/img/assault.png" style="width:10%">
+<img src="resources/css/img/protests.png" style="width:10%">
 </div>
  <br>
  <div>
-<img src="images/burglary.png" style="width:10%">
-<img src="images/protests.png" style="width:10%">
-<img src="images/rape.png" style="width:10%">
-<img src="images/smash&grab.png" style="width:10%">
+<img src="resources/css/img/burglary.png" style="width:10%">
+<img src="resources/css/img/protests.png" style="width:10%">
+<img src="resources/css/img/rape.png" style="width:10%">
+<img src="resources/css/img/smash&grab.png" style="width:10%">
 </div>
    </div>
   </div>
