--- a/frontEndFiles/crimePopUpDisplay.html
+++ b/frontEndFiles/crimePopUpDisplay.html
@@ -8,17 +8,17 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-
-
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+  <link rel="stylesheet" href="resources/css/main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </head>
 
 <body>
-<!--=====modal=====--->
+  <!--=====modal=====--->
   <div class="container">
-<!--====css will be used to align this properly for now i used br tags====-->
+    <!--====css will be used to align this properly for now i used br tags====-->
 
 
     <a href="#" title="Header" data-toggle="popover" data-placement="top" data-content="Content" id="icon">
@@ -37,21 +37,29 @@
       </div>
       <div class="modal-body">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quis quaerat consequatur ipsam adipisci, voluptas dolore nobis minima fuga nam.
-        <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, illum.</p>
+          <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, illum.</p>
         <p id="demo"></p>
+        <a href="#" target="_blank" class="social"><i class="fas fa-plus-circle"></i></a>
+        <a class="twitter-timeline" href="https://twitter.com/TwitterDev/timelines/539487832448843776?ref_src=twsrc%5Etfw">National Park Tweets - Curated tweets by TwitterDev</a>
       </div>
       <div class="modal-footer">
-        <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, quaerat.</h4>
+        <h4>Lorem ipsum dolor</h4>
+        <a href="#" target="_blank" class="social"><i class="fab fa-twitter-square"></i></a>
+        <a href="#" target="_blank" class="social"><i class="fab fa-linkedin"></i></a>
+        <a href="#" target="_blank" class="social"><i class="fab fa-facebook-square"></i></a>
+
+
       </div>
     </div>
 
   </div>
 
 </body>
-    <!-- jQuery first, then Tether, then Bootstrap JS. -->
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+<!-- jQuery first, then Tether, then Bootstrap JS. -->
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<script src="resources/js/crimePopUpDetails.js"></script>
 
-  <script src="resources/js/crimePopUpDetails.js"></script>
 </html>
