--- a/frontEndFiles/appLoader.html
+++ b/frontEndFiles/appLoader.html
@@ -13,14 +13,16 @@
 </head>
 
 <body>
+  <!--=====loader icons====-->
   <div class="loader">
     <div class="dot dot1"></div>
     <div class="dot dot2"></div>
     <div class="dot dot3"></div>
     <div class="dot dot4"></div>
   </div>
+  <!--====loader text===-->
   <div id="text">
-    <p>loading...</p>
+    <p>loading</p>
   </div>
 </body>
 <!-- jQuery first, then Tether, then Bootstrap JS. -->
