--- a/frontEndFiles/appLoader.html
+++ b/frontEndFiles/appLoader.html
@@ -14,7 +14,7 @@
 
 <body>
   <!--=====loader icons====-->
-  <div class="loader">
+  <div class="loader" style="position: relative;">
     <div class="dot dot1"></div>
     <div class="dot dot2"></div>
     <div class="dot dot3"></div>
