--- a/frontEndFiles/ReportForm.html
+++ b/frontEndFiles/ReportForm.html
@@ -155,15 +155,15 @@ textarea {
     opacity: 0.7;
 }
 
-.fa-facebook {
+/*.fa-facebook {
   background: #3B5998;
   color: white;
 }
-
-.fa-twitter {
+*/
+/*.fa-twitter {
   background: #55ACEE;
   color: white;
-}
+}*/
 
 @media (min-width: 768px)
 .container {
