--- a/frontEndFiles/ReportForm.html
+++ b/frontEndFiles/ReportForm.html
@@ -28,6 +28,7 @@
   <link rel="stylesheet" type="text/css" href="resources/css.mapStyle.css">
   <!-- <title>Reporting Page Gallery</title> -->
 
+
   <style>
     .navbar-light .navbar-toggler {
       color: rgba(0, 0, 0, .5);
@@ -163,51 +164,60 @@
   background: #55ACEE;
   color: white;
 }*/
-div#map {
-    position: relative;
-    overflow: hidden;
-    height: 20vh;
+.pac-container.pac-logo {
+z-index: 1051 !important;
 }
+    div#map {
+      position: relative;
+      overflow: hidden;
+      height: 30vh;
+    }
 
-#map {
-     height: 100%;
-     width: 100%;
-   }
-   /* Optional: Makes the sample page fill the window. */
+    #map {
+      height: 100%;
+      width: 100%;
+    }
 
-   .controls {
-     background-color: #fff;
-     border-radius: 2px;
-     border: 1px solid transparent;
-     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-     box-sizing: border-box;
-     font-family: Roboto;
-     font-size: 15px;
-     font-weight: 300;
-     height: 29px;
-     margin-left: auto;
-     margin-top: 10px;
-     outline: none;
-     padding: 0 11px 0 13px;
-     text-overflow: ellipsis;
-     width: 93%;
-   }
+    /* Optional: Makes the sample page fill the window. */
 
-   .controls:focus {
-     border-color: #4d90fe;
-   }
-   .title {
-     font-weight: bold;
-   }
-   #infowindow-content {
-     display: none;
-   }
-   #map #infowindow-content {
-     display: inline;
-   }
-   /* @media (min-width: 768px) .container { width: 460px; } */
+    .controls {
+      background-color: #fff;
+      border-radius: 2px;
+      border: 1px solid transparent;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+      box-sizing: border-box;
+      font-family: Roboto;
+      font-size: 15px;
+      font-weight: 300;
+      height: 29px;
+      margin-left: auto;
+      margin-top: 10px;
+      outline: none;
+      padding: 0 11px 0 13px;
+      text-overflow: ellipsis;
+      width: 93%;
+    }
+
+    .controls:focus {
+      border-color: #4d90fe;
+    }
+
+    .title {
+      font-weight: bold;
+    }
+
+    #infowindow-content {
+      display: none;
+    }
+
+    #map #infowindow-content {
+      display: inline;
+    }
+
+    /* @media (min-width: 768px) .container { width: 460px; } */
   </style>
 </head>
+
 <body>
 
   <div class="row">
@@ -297,20 +307,18 @@ div#map {
         <div class="modal-content">
           <div class="modal-body">
 
-
             <div id='sample'>
               <span class='vertical'>Report Crime</span>
             </div>
 
-
-<input id="pac-input" class="controls" type="text"
-        placeholder="Enter a location" rows="4" cols="50">
-    <div id="map"></div>
-    <div id="infowindow-content">
-      <span id="place-name"  class="title"></span><br>
-      Place ID <span id="place-id"></span><br>
-      <span id="place-address"></span>
-    </div>
+            <div>
+              <input id="pac-input" class="controls" type="search" placeholder="Enter a location">
+              <div id="map"></div>
+              <div id="infowindow-content">
+                <span id="place-name" class="title"></span><br>Place ID<span id="place-id"></span><br>
+                <span id="place-address"></span>
+              </div>
+            </div>
 
 
 
@@ -399,6 +407,63 @@ div#map {
             </section>
 
 
+            <script>
+              function initMap() {
+                var map = new google.maps.Map(document.getElementById('map'), {
+                  center: {
+                    lat: -26.2094848,
+                    lng: 28.0625152
+                  },
+                  zoom: 13
+                });
+
+                var input = document.getElementById('pac-input');
+
+                var autocomplete = new google.maps.places.Autocomplete(input);
+                autocomplete.bindTo('bounds', map);
+
+                map.controls[google.maps.ControlPosition.TOP].push(input);
+
+                var infowindow = new google.maps.InfoWindow();
+                var infowindowContent = document.getElementById('infowindow-content');
+                infowindow.setContent(infowindowContent);
+                var marker = new google.maps.Marker({
+                  map: map
+                });
+                marker.addListener('click', function() {
+                  infowindow.open(map, marker);
+                });
+
+                autocomplete.addListener('place_changed', function() {
+                  infowindow.close();
+                  var place = autocomplete.getPlace();
+                  if (!place.geometry) {
+                    return;
+                  }
+
+                  if (place.geometry.viewport) {
+                    map.fitBounds(place.geometry.viewport);
+                  } else {
+                    map.setCenter(place.geometry.location);
+                    map.setZoom(17);
+                  }
+
+                  // Set the position of the marker using the place ID and location.
+                  marker.setPlace({
+                    placeId: place.place_id,
+                    location: place.geometry.location
+                  });
+                  marker.setVisible(true);
+
+                  infowindowContent.children['place-name'].textContent = place.name;
+                  infowindowContent.children['place-id'].textContent = place.place_id;
+                  infowindowContent.children['place-address'].textContent =
+                    place.formatted_address;
+                  infowindow.open(map, marker);
+                });
+              }
+            </script>
+            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC1wMaYczjQps-ZoZqbkLmI5rMNcC_ROwQ&libraries=places&callback=initMap" async defer></script>
             <!-- Optional JavaScript -->
             <!-- jQuery first, then Popper.js, then Bootstrap JS -->
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
