This is the map with changed Icons to svg

--- a/frontEndFiles/displayCrimes.html
+++ b/frontEndFiles/displayCrimes.html
@@ -15,43 +15,43 @@
           {
             position: new google.maps.LatLng(-26.206890, 28.065420),
             type: 'assault',
-            iconn: 'resources/icons/assault.png'
+            iconn: 'resources/icons//Protests.svg'
           }, {
             position: new google.maps.LatLng(-26.207041, 28.031300),
             type: 'burglary',
-            iconn: 'resources/icons/burglary.png'
+            iconn: 'resources/icons/Burglary.svg'
           }, {
             position: new google.maps.LatLng(-26.201450, -26.201450),
             type: 'hijacking',
-            iconn: 'resources/icons/hijacking.png'
+            iconn: 'resources/icons/Hijacking.svg'
           }, {
             position: new google.maps.LatLng(-26.090460, 28.171560),
             type: 'mugging',
-            iconn: 'resources/icons/mugging.png'
+            iconn: 'resources/icons/Mugging.svg'
           }, {
             position: new google.maps.LatLng(-26.201450, 28.045490),
             type: 'murder',
-            iconn: 'resources/icons/murder.png'
+            iconn: 'resources/icons/Murder.svg'
           }, {
             position: new google.maps.LatLng(-26.205060, 28.075970),
             type: 'protests',
-            iconn: 'resources/icons/protests.png'
+            iconn: 'resources/icons/Protests.svg'
           }, {
             position: new google.maps.LatLng(-26.205100, 28.063430),
             type: 'rape',
-            iconn: 'resources/icons/rape.png'
+            iconn: 'resources/icons/Rape.svg'
           }, {
             position: new google.maps.LatLng(-26.205060, 28.075970),
             type: 'smash_grab',
-            iconn: 'resources/icons/smash_grab.png'
+            iconn: 'resources/icons/SmashGrab.svg'
           }, {
             position: new google.maps.LatLng(-26.203953, 28.072129),
             type: 'assault',
-            iconn: 'resources/icons/assault.png'
+            iconn: 'resources/icons/Assault.svg'
           }, {
             position: new google.maps.LatLng(-26.203951, 28.061377),
             type: 'burglary',
-            iconn: 'resources/icons/burglary.png'
+            iconn: 'resources/icons//Protests.svg'
           }
         ];
 
