--- a/client/index.html
+++ b/client/index.html
@@ -30,7 +30,7 @@
         
         </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChdBMFtKHfi-oRh6z3RG-q4emVnmWPc4g&v=3.32">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC1wMaYczjQps-ZoZqbkLmI5rMNcC_ROwQ">
     </script> 
 
 <!-- <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script> -->
