--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
 		#crime-menu{
 			height: 100%;
 			/* background-color: rgba(226, 180, 61, .7); */
-			background-color: rgba(68, 117, 135, .9);
+			background-color: rgba(68, 117, 135, 1);
 			 /* background-color: transparent;  */
 			width: 200px;
 			position: fixed;
@@ -54,7 +54,7 @@
 		h1{
 			text-align: center;
 			color: #cdcfd1;
-			background-color: rgba(68, 117, 135, .9);
+			background-color: rgba(68, 117, 135, 1);
 ;
 		}
 		</style>
