--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 		<style>
-		
+
 		#crime-menu{
 			height: 100%;
 			/* background-color: rgba(226, 180, 61, .7); */
@@ -44,7 +44,7 @@
 			color: #000000;
 		}
 		#search{
-		
+
 			margin-top: 20px ;
 			margin-left:35px;
 			margin:auto;
@@ -67,16 +67,18 @@
 <div id="map-container"></div>
 <div id="crime-menu">
 	<h2>Search</h2>
-	<input type="search" id="search">
-	<ul>
-		<li><img src="resources/icons/Murder.svg" class="icons">Murder</li>
-		<li><img src="resources/icons/Assault.svg" class="icons">Assault</li>
-		<li><img src="resources/icons/Burglary.svg" class="icons">Burglary</li>
-		<li><img src="resources/icons/Hijacking.svg" class="icons">Hijacking</li>
-		<li><img src="resources/icons/Mugging.svg" class="icons">Mugging</li>
-		<li><img src="resources/icons/Protests.svg" class="icons">Protests</li>
-		<li><img src="resources/icons/Rape.svg" class="icons">Rape</li>
-		<li><img src="resources/icons/SmashGrab.svg" class="icons">SmashGrab</li>
+
+	<input type="search" id="search" placeholder="search for crime here.." onkeyup="myFunction()">
+
+	<ul id=myUl>
+		<li><a href="#"><img src="resources/icons/Murder.svg" class="icons" id="murder"></a>Murder</li>
+		<li><a href="#"><img src="resources/icons/Assault.svg" class="icons" id="assault"></a>Assault</li>
+		<li><a href="#"><img src="resources/icons/Burglary.svg" class="icons" id="burglary"></a>Burglary</li>
+		<li><a href="#"><img src="resources/icons/Hijacking.svg" class="icons" id="hijacking"></a>Hijacking</li>
+		<li><a href="#"><img src="resources/icons/Mugging.svg" class="icons" id="mugging"></a>Mugging</li>
+		<li><a href="#"><img src="resources/icons/Protests.svg" class="icons" id="protests"></a>Protests</li>
+		<li><a href="#"><img src="resources/icons/Rape.svg" class="icons" id="rape"></a>Rape</li>
+		<li><a href="#"><img src="resources/icons/SmashGrab.svg" class="icons"id="mashgrab"></a>SmashGrab</li>
 	</ul>
 
 </div>
@@ -88,6 +90,8 @@
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 
     <script     src="resources/js/main.js">
+
+
     </script>
 
 
@@ -97,7 +101,24 @@
     </script>
 
 <!-- <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script> -->
+<script>
+function myFunction() {
+var input, filter, ul, li, a, i;
+input = document.getElementById("search");
+filter = input.value.toUpperCase();
+ul = document.getElementById("myUl");
+li = ul.getElementsByTagName("li");
+for (i = 0; i < li.length; i++) {
+		a = li[i].getElementsByTagName("a")[0];
+		if (a.innerHTML.toUpperCase().indexOf(filter) > -1) {
+				li[i].style.display = "";
+		} else {
+				li[i].style.display = "none";
+		}
+}
+}
 
+</script>
 
 
 </body>
