--- a/client/index.html
+++ b/client/index.html
@@ -57,6 +57,17 @@
 			background-color: rgba(68, 117, 135, 1);
 ;
 		}
+		#disclaimer{
+			position: absolute;
+			bottom: 5%;
+			right: 5%;
+			z-index: 100;
+			padding: 20px;
+			background-color: #f44336; /* Red */
+			color: white;
+			
+
+		}
 		</style>
 
 
@@ -82,7 +93,7 @@
 	</ul>
 
 </div>
-
+<div id="disclaimer">DUMMY DATA</div>
 
 
 
