Added menu and replaced splash image

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,7 +44,7 @@
 </head>
 <body >
 
-<div class="loader"><img src="src/css/img/animation2.gif" alt="loading..."/></div>
+<div class="loader"><img src="src/css/img/splash_screen.png" alt="loading..."/></div>
 
 <aside class="mdc-drawer mdc-drawer--dismissible">
     <div class="mdc-drawer__header">
