--- a/frontend/index.html
+++ b/frontend/index.html
@@ -76,10 +76,12 @@
 	<section id="crimetype">
 		<nav class="nav">
 			<ul class="navbar-nav">
-	    
-	    	<li class="nav-item"><h4>Select Crime Type</h4></li>
+				<li class="nav-item"><h4>Select Crime Type</h4></li>
+
 			</ul>
+			<p id="close">✖</p>
 	  </nav>
+
 
 
 		<div class="row text-center">
@@ -99,23 +101,6 @@
 		<div class="col"><img src="src/icons/Robbery.svg" alt="Robbery"><p>Robbery</p></div>
 		<div class="col"><img src="src/icons/SmashGrab.svg" alt="SmashGrab"><p>SmashGrab</p></div>
 	</div>
-
-		<!--
-
-
-
-		<div class="row">
-		  <div class="column">
-		     <a href="index.html"><img src="src/icons/Rape.svg" alt="Rape" style="width:70%"><div class="centered6">Rape</div>  </a>
-		  </div>
-		  <div class="column">
-		    <a href="index.html"><img src="src/icons/Robbery.svg" alt="Robbery" style="width:70%"><div class="centered7">Robbery</div>  </a>
-		  </div>
-		  <div class="column">
-		    <a href="index.html"><img src="src/icons/SmashGrab.svg" alt="SmashGrab" style="width:70%"><div class="centered8">SmashGrab</div>  </a>
-		  </div>
-		</div> -->
-
 	</section>
 
 
